cfn_gateway_endpoint_to_s3.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Create 2 EC2, one in public subnet and one in private subnet, plus VPC Endpoint (Gateway Endpoint) to allow private ec2 to access S3

Parameters:
  NamingPrefix:
    Description: The naming prefix for resources created by this template.
    Type: String
    Default: rachel-
  VpcCidrBlock:
    Description: CIDR block of VPC
    Type: String
    Default: 10.0.0.0/16
  PublicSubnetACidrBlock:
    Description: CIDR block of VPC
    Type: String
    Default: 10.0.16.0/20
  PrivateSubnetACidrBlock:
    Description: CIDR block of VPC
    Type: String
    Default: 10.0.0.0/20
  SSHLocation:
    Description: 'The IP address range that can be used to access the web server using SSH.'
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x. 
    Default: xx.xx.xx.xx/32 #my ip address
  KeyName:
    Description: Name of an EC2 KeyPair to enable SSH access to the instance.
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair
    Default: my_keypair
  AmiId:
    Description: Amazon Linux 2 AMI (HVM), SSD Volume Type, 64-bit (x86), Root device type - ebs 
    Type: String
    Default: 'ami-0a0de518b1fc4524c'
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro

Resources:
  ###########
  # VPCEndpoint - Gateway endpoint
  ###########    

  GatewayEndpointS3:
    Type: AWS::EC2::VPCEndpoint
    Properties: 
      RouteTableIds: 
        - !Ref PrivateRouteTable
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      VpcEndpointType: Gateway
      VpcId: !Ref VPC

  ###########
  # VPC
  ###########    

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock #you can define the IP address range in CIDR notation
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true' #allocate automatically DNS name to each EC2 instance we deploy in the VPC
      InstanceTenancy: default #This parameter has only effect if we don't specify a tenancy for the EC2 instance during launch
      Tags: #Tags are quite useful to differentiate resources 
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref NamingPrefix
              - VPC  
  ###########
  # Subnet A
  ###########    

  #Each subnet is provisioned in the first availability zone in the current region
  #Each subnet is placed inside the VPC defined earlier
  #These IP ranges are non-overlapping and fall within the overall VPC's IP range
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: AWS::Region
      CidrBlock: !Ref PublicSubnetACidrBlock
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref NamingPrefix
              - PublicSubnetA       
        - Key: Reach
          Value: public
  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select # !Select function gets the first AZ in the list
        - 0 #AZ0
        - !GetAZs # !GetAZs Ref: AWS::Region gets all the availability zones in the current region
          Ref: AWS::Region
      CidrBlock: !Ref PrivateSubnetACidrBlock
      MapPublicIpOnLaunch: false 
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref NamingPrefix
              - PrivateSubnetA
        - Key: Reach
          Value: private

  ###########
  # Internet Gateway
  ###########    
  #InternetGateway allows instances within the VPC to access the internet
  #also allows the internet to access servers within the public subnet
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  AttachGateway: #associate InternetGateway with our VPC
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  ###########
  # Route Table to Internet
  ###########  
  PublicRouteTable: #associates RouteTable itself with a VPC
    DependsOn: AttachGateway #define a dependency
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC 
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref NamingPrefix
              - PublicRTB 
  PublicDefaultRoute: #points an IP address range to a gateway
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0 #0.0.0.0/0 is the most common network with all addresses from 0.0.0.0 to 255.255.255.255
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable
  PublicRouteAssociationA: #wires up the route table to a subnet
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnetA

  ###########
  # Private Route Table
  ###########  
  PrivateRouteTable: 
    Description: Route table that contains the routes for the private subnet.
    Type: AWS::EC2::RouteTable  
    Properties:
      VpcId: !Ref VPC
      Tags: 
        - Key: Name
          Value: !Join ['-',[!Ref NamingPrefix, 'PrivateRTB']]
  PrivateRouteAssociationA: #wires up the route table to a subnet
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnetA

  ###########
  # Network Acl
  ########### 
  PublicNetworkAcl:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Join ['-',[!Ref NamingPrefix, 'PublicNetworkAcl']]
  SubnetNetworkAclAssociationPublic:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PublicSubnetA
      NetworkAclId: !Ref PublicNetworkAcl
  NetworkAclEntryInPublicAllowVPC:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: '0.0.0.0/0'
  NetworkAclEntryOutPublicAllowVPC:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: '0.0.0.0/0'

  PrivateNetworkAcl:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Join ['-',[!Ref NamingPrefix, 'PrivateNetworkAcl']]
  SubnetNetworkAclAssociationPrivate:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnetA
      NetworkAclId: !Ref PrivateNetworkAcl
  NetworkAclEntryInPrivateAllowVPC:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PrivateNetworkAcl
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: '0.0.0.0/0'
  NetworkAclEntryOutPrivateAllowVPC:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PrivateNetworkAcl
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: '0.0.0.0/0'

  ###########
  # Public Security Group
  ###########
  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupName: ec2-publicSG
      GroupDescription: >-
        Enable SSH traffic and HTTP access via port 80 and 443 to the allowed CIDR
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'  #80 for http (unsecured websites)
          ToPort: '80'
          CidrIp: 0.0.0.0/0 
        - IpProtocol: tcp
          FromPort: '443' #443 for https (secured websites)
          ToPort: '443'
          CidrIp: 0.0.0.0/0 
        - IpProtocol: tcp
          FromPort: 22 #SSH
          ToPort: 22
          CidrIp: !Ref SSHLocation
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref NamingPrefix
              - pulicSG  

  ###########
  # Private Security Group
  ###########
  PrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupName: ec2-privateSG
      GroupDescription: >-
        Enable SSH traffic from BastionEC2Instance
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22 
          ToPort: 22
          SourceSecurityGroupId: !Ref PublicSecurityGroup
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref NamingPrefix
              - privateSG  

  ###########
  # Public ec2 (bastion host)
  ###########
  BastionEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AmiId
      InstanceType: !Ref InstanceType
      #AvailabilityZone: !Ref AvailabilityZone
      KeyName: !Ref KeyName
      IamInstanceProfile: !Ref PublicInstanceProfile
      NetworkInterfaces: #NetworkInterfaces property is the only way to give the web server a public IP (and DNS name) 
        - GroupSet:
            - !Ref PublicSecurityGroup
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref PublicSubnetA
      Tags:
        - Key: Name
          Value:  !Join ['-',[!Ref NamingPrefix, 'Bastion Instance']]

  ###########
  # Private ec2
  ###########
  PrivateEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AmiId
      InstanceType: !Ref InstanceType
      #AvailabilityZone: !Ref AvailabilityZone
      KeyName: !Ref KeyName
      IamInstanceProfile: !Ref PrivateInstanceProfile
      NetworkInterfaces: #NetworkInterfaces property is the only way to give the web server a public IP (and DNS name) 
        - GroupSet:
            - !Ref PrivateSecurityGroup
          AssociatePublicIpAddress: 'false'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref PrivateSubnetA
      Tags:
        - Key: Name
          Value:  !Join ['-',[!Ref NamingPrefix, 'Private Instance']]

  ###################
  # Instance Profile
  ###################
  PublicInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: chel-ec2-public-instance-profile
      Path: /
      Roles:
        - !Ref EC2InstanceRole

  PrivateInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: chel-ec2-private-instance-profile
      Path: /
      Roles:
        - !Ref EC2InstanceRole

  #################################
  # IAM Role for EC2 to access S3
  #################################
  EC2InstanceRole:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName: S3RoleForEC2-rachel
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: AmazonS3FullAccess
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: 's3:*'
                Resource: '*'

Outputs:
  StackName:
    Description: 'Stack name'
    Value: !Sub '${AWS::StackName}'
  VPCId:
    Value: !Ref VPC
    Export:
      Name: 'vpcid'  
  PrivateSubnetA:
    Value: !Ref PrivateSubnetA
    Export:
      Name: 'private-subnet-A'
  PublicSubnetA:
    Value: !Ref PublicSubnetA
    Export:
      Name: 'public-subnet-A'
  Endpoint:
    Description: 'The VPC endpoint to S3'
    Value: !Ref GatewayEndpointS3
    Export:
      Name: !Sub '${AWS::StackName}-EndpointS3'
  ec2PrivateSecurityGroup:
    Value: !Ref PrivateSecurityGroup
    Export:
      Name: 'ec2-private-security-group'
  ec2PublicSecurityGroup:
    Value: !Ref PublicSecurityGroup
    Export:
      Name: 'ec2-public-security-group'
